plugins {    
    id "java"    
    id "com.github.ben-manes.versions" version "0.51.0"
}

// 使用toolchain 必须org.gradle.java.home需对应 gradle -q javaToolchains
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

compileJava {
    options.encoding = 'UTF-8'
    options.warnings = true
    options.deprecation = true
    //options.compilerArgs.addAll(["-XDignore.symbol.file", "-Xlint:deprecation", "-Xlint:unchecked", "-Xlint:all"])
}
dependencies {
    implementation("ch.qos.logback:logback-classic:${logback}")
    testImplementation("org.yaml:snakeyaml:${snakeyaml}", "junit:junit:${junit}")
}

task testAll(type: Test, dependsOn: testClasses) {
    include '**/*Test'
}

tasks.withType(Test) {
    testLogging {
        events 'started', 'passed'
    }
}
